# picachain

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy_docs.yml  test_documentation_build.yml
docs/: docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: intro.md
docs/docs/Conversation/: _category_.json  chart-qna.md
docs/docs/Generation/: _category_.json
docs/docs/image-retrieval/: _category_.json  chromadb.md
docs/src/pages/: original_index.js
docs/static/: index.html
examples/: chart_conversation_chain.ipynb  chromadb_search.ipynb
picachain/: structures.py
picachain/chains/: base.py
picachain/chains/conversation/: __init__.py  charts.py
picachain/chains/image/: search.py
picachain/chains/unstructured/: charts.py
picachain/datastore/: __init__.py  base.py  chroma.py  pinecone.py
picachain/embedding/: __init__.py  clip_embedding.py
picachain/engine/: image.py  video.py
picachain/loaders/: __init__.py  base.py  charts.py  image.py  videos.py
picachain/models/: __init__.py  base.py
picachain/models/deplot/: deplot.py
picachain/models/ollama/: ollamaapi.py
picachain/models/openai/: openai.py
picachain/retriever/: image_retriever.py
picachain/unstructured/: charts.py
picachain/utils/: __init__.py  image_util.py
