[tool.poetry]
authors = ["d1pankarmedhi <dipankarmedhi11@gmail.com>"]
description = "Build quick LLM pipelines for image specific tasks."
homepage = "https://github.com/d1pankarmedhi/picachain"
keywords = [
  "python",
  "search-engine",
  "chromadb",
  "image",
  "search",
  "packages",
  "poetry",
  "python-packages",
  "pinecone",
]
license = "MIT"
name = "picachain"
packages = [{include = "picachain"}]
readme = "README.md"
repository = "https://github.com/d1pankarmedhi/picachain"
version = "0.1.35"

[tool.poetry.dependencies]
chromadb = "^0.4.24"
matplotlib = "^3.8.3"
pillow = "^10.3.0"
pinecone-client = "^3.2.1"
pysqlite3-binary = "^0.5.2.post3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
